<resources>
    <string name="app_name">Allergy Products</string>
    <string name="title_activity_create_allergy" translatable="false">CreateAllergyActivity</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main" translatable="false">Barcode Reader Sample</string>
    <string name="barcode_header" translatable="false">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success" translatable="false">Barcode read successfully</string>
    <string name="barcode_failure" translatable="false">No barcode captured</string>
    <string name="barcode_error" translatable="false">"Error reading barcode: %1$s"</string>
    <string name="action_search">search</string>
    <string name="action_barcode_scan">Scan Barcode</string>
    <string name="add_new_product">Add New Product</string>
    <string name="activity_allergy_title">title</string>
    <string name="activity_allergy_description">description</string>
    <string name="activity_allergy_barcode">barcode</string>
    <string name="activity_allergy_create_save_product">Save Product</string>
    <string name="activity_allergy_description_required">Description is required!</string>
    <string name="activity_allergy_title_required">Title is required!</string>
    <string name="activity_allergy_barcode_required">Barcode is required!</string>
    <string name="activity_allergy_update">Update</string>
    <string name="activity_allergy_delete">Delete</string>
    <string name="activity_allergy_barcode_is_duplicate_required">Barcode must be unique!</string>
    <string name="cancel">cancel</string>
    <string name="dialog_create_message">Entry with barcode already exists! Want to open existing entry?</string>
    <string name="dialog_create_title">Entry exists!</string>
    <string name="take_picture">Take picture</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
